--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
 
   <div id="hud" class="unselectable"><ul></ul></div>
 
-  <script src="funText/p5.easycam.js"></script>
-  <script src="funText/Letter.js" type="text/javascript"></script>
-  <script src="funText/Word.js" type="text/javascript"></script>
-  <script src="funText/mySketch.js" type="text/javascript"></script>
+  <script src="p5.easycam.js"></script>
+  <script src="Letter.js" type="text/javascript"></script>
+  <script src="Word.js" type="text/javascript"></script>
+  <script src="mySketch.js" type="text/javascript"></script>
 
 </body>
 
