--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>SCET x ALEXA</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon"> 
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.min.js"></script>
