--- a/index.html
+++ b/index.html
@@ -2,7 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>SCET x ALEXA</title>
+  <title>DataX</title>
+
+  <h1> Lecture Material From March 14th for IEOR 135 // IEOR 290:</h1>
+<ul>
+  <p>GitHub: https://github.com/ikhlaqsidhu/data-x </p>
+  <p>Slides: http://tinyurl.com/IEOR290 </p>
+  <p>Jupyter Notebook: </p>
+</ul>
+
   <link rel="icon" href="favicon.ico" type="image/x-icon"> 
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
