Lecture for 2.14 links

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <ul>
   <p>GitHub: https://github.com/ikhlaqsidhu/data-x </p>
   <p>Slides: http://tinyurl.com/IEOR290 </p>
-  <p>Jupyter Notebook: </p>
+  <p>Jupyter Notebook: https://github.com/vbartle/dialogsystems.github.io/blob/master/LEC2.14%20%40%20DataX.ipynb</p>
 </ul>
 
   <link rel="icon" href="favicon.ico" type="image/x-icon"> 
