Lecture for 2.14 link updates

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
   <h1> Lecture Material From March 14th for IEOR 135 // IEOR 290:</h1>
 <ul>
-  <p>GitHub: https://github.com/ikhlaqsidhu/data-x </p>
-  <p>Slides: http://tinyurl.com/IEOR290 </p>
-  <p>Jupyter Notebook: https://github.com/vbartle/dialogsystems.github.io/blob/master/LEC2.14%20%40%20DataX.ipynb</p>
+  <p><a href="https://github.com/ikhlaqsidhu/data-x">GitHub</a> </p>
+  <p><a href="http://tinyurl.com/IEOR290"> Slides </a> </p>
+  <p><a href="https://github.com/vbartle/dialogsystems.github.io/blob/master/LEC2.14%20%40%20DataX.ipynb">Jupyter Notebook</a> </p>
 </ul>
 
   <link rel="icon" href="favicon.ico" type="image/x-icon"> 
